# secaudit

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  main.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml  secaudit.yml
docs/screenshots/: README.md
secaudit/: __init__.py  __main__.py  cli.py  config.py  context.py  core.py  diff.py  engine.py  errors.py  http.py  models.py  profiles.py  registry.py  scoring.py
secaudit/modules/: __init__.py  api.py  cookies.py  csp.py  dns.py  email_dns.py  headers.py  javascript.py  proxy_cache.py  static.py  tls.py
secaudit/reporter/: __init__.py  html.py  json.py  terminal.py
secaudit/reporters/: __init__.py  html.py  json.py  terminal.py
secaudit/ui/: __init__.py  banner.py  console.py  interactive.py  tables.py
tests/: test_cli.py  test_config.py  test_context.py  test_models.py  test_registry.py  test_scoring.py
