[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secaudit"
description = "Safe, modular external security auditing for public-facing web applications."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "SllHex", email = "dana.rahimi007@gmail.com" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "aiohttp>=3.9",
  "click>=8.1",
  "dnspython>=2.6",
  "jinja2>=3.1",
  "rich>=13.7",
  "tomli>=2.0; python_version < '3.11'",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pytest>=8.2",
  "ruff>=0.5",
]

[project.scripts]
secaudit = "secaudit.cli:app"

[tool.setuptools.packages.find]
include = ["secaudit*"]

[tool.setuptools.dynamic]
version = { attr = "secaudit.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 140
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["tomli", "tomllib"]
ignore_missing_imports = true
